--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.gitignore.io/api/java,linux,macos,windows,android,intellij,androidstudio
 # Edit at https://www.gitignore.io/?templates=java,linux,macos,windows,android,intellij,androidstudio
 
+.idea/
+
 ### Android ###
 # Built application files
 *.apk
@@ -21,6 +23,8 @@ out/
 # Gradle files
 .gradle/
 build/
+gradle.properties
+settings.gradle.kts
 
 # Local configuration file (sdk path, etc)
 local.properties
