add Request/Response DTO classes & ApiServices

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,4 +26,6 @@
         <activity android:name=".auth.RegisterActivity" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
